[gd_scene load_steps=6 format=3 uid="uid://7gv6q50fuutj"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_1w47b"]
[ext_resource type="PackedScene" uid="uid://dbduds4bsaaby" path="res://Scenes/Bullet/Bullet.tscn" id="2_je25s"]
[ext_resource type="PackedScene" uid="uid://b4jpkpsguwo3b" path="res://Scenes/Guns/AK47/AK47.tscn" id="3_ns84m"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_emkox"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6b3ky"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_1w47b")
_bullet_scene = ExtResource("2_je25s")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_emkox")

[node name="MeshInstance3d" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_6b3ky")

[node name="Head" type="Node3D" parent="."]

[node name="Camera3d" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.468479, -0.463024)

[node name="AK47" parent="Head/Camera3d" instance=ExtResource("3_ns84m")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.155679, -0.223541, -0.211069)

[node name="CanvasLayer" type="CanvasLayer" parent="Head/Camera3d"]

[node name="AmmoCount" type="Label" parent="Head/Camera3d/CanvasLayer"]
offset_left = 1036.0
offset_top = 551.0
offset_right = 1076.0
offset_bottom = 620.0
theme_override_font_sizes/font_size = 50

[connection signal="fired" from="Head/Camera3d/AK47" to="." method="_on_ak_47_fired"]
[connection signal="reloaded" from="Head/Camera3d/AK47" to="." method="_on_ak_47_reloaded"]
